<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".LogActivity" 
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" 
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
     
                    <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical" 
                        android:layout_marginRight="@dimen/activity_horizontal_margin">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/minutesLabel"
                            android:textAppearance="?android:attr/textAppearanceSmall" />

                        <NumberPicker
                            android:id="@+id/minutesPicker"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp" 
                            android:layout_weight="1"/>

                    </LinearLayout>

       <LinearLayout
           android:id="@+id/unitSelection"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical" 
                        android:layout_marginLeft="@dimen/spinner_horizontal_margin"
                        android:layout_marginRight="@dimen/spinner_horizontal_margin">

                        <TextView
                            android:id="@+id/unitTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:maxLines="1"
                            android:text="@string/unitsLabelText"
                            android:textAppearance="?android:attr/textAppearanceSmall" />

                        <NumberPicker
                            android:id="@+id/unitPicker"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp" 
                            android:layout_weight="1"/>

                    </LinearLayout>

  <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical" 
                        android:layout_marginLeft="@dimen/activity_horizontal_margin">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/caloriesLabelText"
                            android:textAppearance="?android:attr/textAppearanceSmall" />

                        <NumberPicker
                            android:id="@+id/caloriesPicker"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp" 
                            android:layout_weight="1"/>

                    </LinearLayout>
            
                    <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />

        </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/border"        
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"  
        android:layout_marginTop="@dimen/activity_vertical_margin"  >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

    </FrameLayout>

</LinearLayout>
